--- a/src/index.html
+++ b/src/index.html
@@ -62,11 +62,10 @@
 
       <label for="ordenalfa"></label>
       <select class="selectFilm" id="selectordenAZ">
-        <option value="ordenalfa"></option>
-        <option value="">A</option>
-        <option value="">B</option>
-        <option value="">C</option>
-        <option value="">D...</option>
+        <option value="todos"></option>
+        <option value="A-Z">A</option>
+        <option value="Z-A">z</option>
+        
       
       </select>
 
