--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 
       <label for="ordenalfa"></label>
       <select class="selectFilm" id="selectordenAZ">
-        <option value="todos"></option>
+        <option value="todos">Todos</option>
         <option value="A-Z">A</option>
         <option value="Z-A">z</option>
         
