--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 
       <label for="ordenalfa"></label>
       <select class="selectFilm" id="selectordenAZ">
-        <option value="todos">Todos</option>
+        <option value="todos"></option>
         <option value="A-Z">A</option>
         <option value="Z-A">z</option>
         
@@ -72,23 +72,23 @@
 
       <label for="year"></label>
       <select class="selectFilm" id="selectYear">
-        <option value=""></option>
-        <option value="">1986</option>
-        <option value="">1989</option>
-        <option value="">1988</option>
-        <option value="">1991</option>
-        <option value="">1992</option>
-        <option value="">1994</option>
-        <option value="">1995</option>
-        <option value="">1997</option>
-        <option value="">2001</option>
-        <option value="">2004</option>
-        <option value="">2006</option>
-        <option value="">2008</option>
-        <option value="">2010</option>
-        <option value="">2011</option>
-        <option value="">2013</option>
-        <option value="">2014</option>
+        <option value="release_date"></option>
+        <option value="release_date">1986</option>
+        <option value="release_date">1989</option>
+        <option value="release_date">1988</option>
+        <option value="release_date">1991</option>
+        <option value="release_date">1992</option>
+        <option value="release_date">1994</option>
+        <option value="release_date">1995</option>
+        <option value="release_date">1997</option>
+        <option value="release_date">2001</option>
+        <option value="release_date">2004</option>
+        <option value="release_date">2006</option>
+        <option value="release_date">2008</option>
+        <option value="release_date">2010</option>
+        <option value="release_date">2011</option>
+        <option value="release_date">2013</option>
+        <option value="release_date">2014</option>
       </select>
 
     </section>
