modal y filtros activos :D

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,8 @@
   </section>
 
   <main>
+  
+
     <section class="selectFilm" id="section-peliculas"><a href="#home">Peliculas</a>
 
       <label for="director"></label>
@@ -92,13 +94,14 @@
       </select>
 
     </section>
+
     <section>
       <div class="films" id="films.anime">
       </div>
     </section>
     <section class="selectFilm" id="section-personajes"><a href="#home">Personajes</a>
-      <section>
-        <div class = "modal" id="modal"></div> 
+    
+      <section class = "sheetmodal" id="sheetmodal"> 
       </section>
      
     </section>
