--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,6 @@
       <label for="ordenalfa"></label>
       <select class="selectFilm" id="selectordenAZ">
         <option></option>
-        <option value="todas">Todas</option>
         <option value="A-Z">A-Z</option>
         <option value="Z-A">Z-A</option>
 
@@ -75,7 +74,6 @@
       <label for="year"></label>
       <select class="selectFilm" id="selectYear">
         <option></option>
-        <option value="todas">Todas</option>
         <option value="1986">1986</option>
         <option value="1989">1989</option>
         <option value="1988">1988</option>
@@ -93,28 +91,27 @@
         <option value="2013">2013</option>
         <option value="2014">2014</option>
       </select>
-     <!--<section>
-        
-        <div class="modal-container" id="films_personajes"></div>
-         
-      </section>-->
+
     </section>
     <section>
       <div class="films" id="films.anime">
+        <div class="containerPoster">
+          <img src ="boxImage" alt ="poster"></div>
+        <div class="containerCard"></div>
       </div>
     </section>
-    <section class="selectFilm" id="section-personaje"><a href="#home">Personajes</a>
+    <section class="selectFilm" id="section-personajes"><a href="#home">DATOS Y RESEÑAS</a>
       <section>
-        <!-- <div class = "modal-container" id="modal"></div> 
-      </section>-->
+        <div class="modal-container" id="modal"></div>
+      </section>
 
-      </section>
-      <label for="personajes"></label>
-      <select class="selectFilm">
-        <option></option>
-      </select>
-      <section id="section-Historia"><a href="#home">Historia</a>
-      </section>
+      <!--</section>
+    <label for="personajes"></label>
+    <select class="selectFilm">
+      <option></option>
+    </select>
+    <section id="section-Historia"><a href="#home">Historia</a>
+    </section>-->
 
   </main>
 
