ahora si sort ascendente y el anterior css

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,12 @@
         <option value="Z-A">Z-A</option>
       </select>
 
+      <label for="ordenadescendente"></label>
+      <select class="selectFilm" id="selectorordenyears">
+       <option>Orden por Año</option>
+        <option value="Ascendente">Ascendente</option>
+        <option value="Descendente">Descedente</option>
+      </select>
 
       <label for="year"></label>
       <select class="selectFilm" id="selectYear">
@@ -114,7 +120,9 @@
 
   </main>
   <footer>
-    <h1> "Data Studio Ghibli" - Proyecto realizado por Aymara Guiñez y Karen Escobar - Laboratoria Febrero 2022-.</h1>
+    <div class="footer">
+    <p1> "Data Studio Ghibli" - Proyecto realizado por Aymara Guiñez y Karen Escobar - Laboratoria Febrero 2022-.</p1>
+  </div>
   </footer>
   <script src="main.js" type="module"></script>
 </body>
