--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
 
   </main>
   <div class="footer">
-    <p1> "Data Studio Ghibli" - Proyecto realizado por Aymara Guiñez y Karen Escobar - Laboratoria Febrero 2022-.</p1>
+    <p1> "Data Studio Ghibli" - Proyecto realizado por Aymara Guiñez y Karen Escobar - Laboratoria Febrero 2022-.</1p>
 </div>
   <script src="main.js" type="module"></script>
 </body>
